--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
     "autoprefixer": "^10.4.19",
+    "i18next": "^23.11.5",
+    "i18next-http-backend": "^2.5.2",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "three": "^0.165.0"
