--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^8.16.8",
     "autoprefixer": "^10.4.19",
     "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
