--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "tailwindcss-animated": "^1.1.0",
     "three": "^0.165.0"
   },
   "devDependencies": {
