--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/styled-engine": "^5.15.14",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
+    "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.19",
+    "framer-motion": "^11.2.10",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
@@ -27,6 +29,7 @@
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-scroll-parallax": "^3.4.5",
     "tailwindcss-animated": "^1.1.0",
     "three": "^0.165.0"
   },
