--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll-parallax": "^3.4.5",
+    "swiper": "^10.0.0",
     "tailwindcss-animated": "^1.1.0",
     "three": "^0.165.0"
   },
